packages/core/src/components/bce-switch/bce-switch.scss
bce-switch {
  @include bce-color-default(primary);
  position: relative;
  display: inline-block;
  width: 36px;
  height: 20px;

  > label {
    display: flex;
    align-items: center;
    height: 100%;

    > input {
      display: none;
    }

    > div {
      width: 36px;
      height: 12px;
      border-radius: 14px;

      &:after {
        @include elevate(1);
        content: '';
        position: absolute;
        top: 0;
        right: 0;
        width: 20px;
        height: 20px;
        border-radius: 50%;
      }

      &[data-off] {
        background-color: bce-color-d(light);

        &:after {
          left: 0;
          background-color: bce-color(light);
        }
      }

      &[data-on] {
        background-color: bce-color-l();

        &:after {
          background-color: bce-color();
        }
      }
    }
  }

  &:not([disabled]):focus {
    outline: none;

    > label > div {
      &:after {
        width: 10px;
        height: 10px;
      }

      &[data-off]:after {
        background-color: bce-color-d(light);
        border: 5px solid bce-color(light);
      }

      &[data-on]:after {
        background-color: bce-color-l();
        border: 5px solid bce-color();
      }
    }
  }

  &[disabled] > label > div {
    background-color: bce-color-l(disable);

    &:after {
      background-color: bce-color(disable);
    }
  }
}

